--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -32,5 +32,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
+          echo hello my name is gautam krisha sharma,
           echo test, and deploy your project.
